Fixed bad typo in template

--- a/blueprints/dim_lights_based_on_sun_elevation.yaml
+++ b/blueprints/dim_lights_based_on_sun_elevation.yaml
@@ -260,7 +260,7 @@ action:
   - choose:
     - conditions:
       - condition: template
-        value_template: "{{ debugging && trigger is not defined }}"
+        value_template: "{{ debugging and trigger is not defined }}"
       sequence:
       - service: logger.set_level
         data:
